# seek

./: .gitignore  CLAUDE.md  README.md  SOLANA_MOBILE_DOCS.md
.github/workflows/: ci.yml
assets/deck/: seek-brand-kit.md
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  railway.json
backend/scripts/: DEPLOY_MAINNET.md  admin.ts  initialize-protocol.ts  swap-network.ts
backend/src/: index.ts
backend/src/config/: index.ts
backend/src/data/: missions.ts
backend/src/idl/: seek_protocol.json
backend/src/middleware/: auth.middleware.ts  rateLimiter.middleware.ts  validate.middleware.ts
backend/src/routes/: bounty.routes.ts  health.routes.ts  sgt.routes.ts  skr.routes.ts
backend/src/services/: ai.service.ts  attestation.service.ts  bounty.service.ts  exif.service.ts  finalizer.service.ts  logger.service.ts  redis.service.ts  sentry.service.ts  (+3 more)
contracts/: Anchor.toml  package-lock.json  package.json  tsconfig.json
contracts/programs/seek-protocol/: Cargo.toml
contracts/programs/seek-protocol/src/: lib.rs
contracts/tests/: seek-protocol.ts
dapp-store-publishing/: README.md  config.yaml
mobile/: App.tsx  README.md  SENTRY.md  app.json  eas.json  index.ts  package-lock.json  package.json  polyfill.ts
mobile/android/: SIGNING.md  gradle.properties
tasks/: audit-2026-04-22.md  dapp-store-checklist.md  dapp-store-listing-copy.md  lessons.md  mainnet-plan.md  phase-b-execution.md  roadmap.md  security-audit.md  todo.md  where-we-are.md
tasks/archive/: real-device-demo-2026-02-27.md  security-audit-2026-02-27.md
(+39 files in other folders)
