[package]
name = "seek-protocol"
version = "0.1.0"
description = "Seek Protocol - Pokemon GO for crypto scavenger hunts on Solana"
edition = "2021"
license = "MIT"
repository = "https://github.com/seek-protocol/seek"

[lib]
crate-type = ["cdylib", "lib"]
name = "seek_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
# Pin blake3 to avoid edition2024 requirement (Solana SDK has old Cargo)
blake3 = "=1.5.0"
# Use solana_program from anchor-lang instead of separate dependency
